# calc

./: AST.hpp  CMakeLists.txt  Calculus.cpp  Calculus.hpp  Config.cpp  Config.hpp  Diagnostics.cpp  Diagnostics.hpp  Engine.cpp  Engine.hpp  Evaluator.cpp  Evaluator.hpp  ExactValue.cpp  ExactValue.hpp  HybridInt.cpp  HybridInt.hpp  Matrix.cpp  Matrix.hpp  Parser.cpp  Parser.hpp  Polynomial.cpp  Polynomial.hpp  README.md  Token.hpp  Tokenizer.cpp  Tokenizer.hpp  calc  file.md  main.cpp  mini_test.txt  mini_test2.txt  test_calc.txt  test_input.txt
